# gmail-subscription-cleanup

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml
backend/: config.py  main.py
backend/auth/: gmail_auth.py
backend/db/: database.py
backend/models/: subscription.py
backend/services/: gmail_service.py  openai_service.py  unsubscribe.py
frontend/: app.py  config.py
frontend/components/: subscription_card.py
tests/: conftest.py  test_api.py  test_database.py  test_gmail_auth.py  test_gmail_service.py  test_models.py  test_openai_service.py  test_unsubscribe.py
